# SpeedyColibri

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  PORTING.md  README.md  SCALING.md  VALIDATION.md
.github/: pull_request_template.md
c/: backend_cuda.cu  backend_cuda.h  glm.c
crates/coli/: Cargo.toml  build.rs
crates/coli/src/: main.rs  serve.rs
crates/colibri-backend/: Cargo.toml  build.rs
crates/colibri-backend/cuda/: backend_cuda.cu  backend_cuda.h
crates/colibri-backend/src/: cuda.rs  lib.rs
crates/colibri-cluster/: Cargo.toml
crates/colibri-cluster/src/: discovery.rs  lib.rs  net.rs  sharding.rs  transport.rs
crates/colibri-core/: Cargo.toml
crates/colibri-core/src/: config.rs  dtype.rs  lib.rs  quant.rs  tier.rs
crates/colibri-engine/: Cargo.toml
crates/colibri-engine/src/: attention.rs  cache.rs  chunk.rs  convert.rs  dsa.rs  forward.rs  gpu.rs  lib.rs  linear.rs  loader.rs  math.rs  model.rs  moe.rs  mtp.rs  preload.rs  quantize.rs  sampling.rs  usage.rs
crates/colibri-engine/tests/: forward_tiny.rs  load_tiny_model.rs
crates/colibri-grammar/: Cargo.toml
crates/colibri-grammar/src/: lib.rs
crates/colibri-json/: Cargo.toml
crates/colibri-json/src/: lib.rs
crates/colibri-kernels/: Cargo.toml
crates/colibri-kernels/src/: lib.rs
crates/colibri-safetensors/: Cargo.toml
crates/colibri-safetensors/src/: lib.rs
crates/colibri-tokenizer/: Cargo.toml
crates/colibri-tokenizer/src/: lib.rs  unicode_tables.rs
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  run-dgx.sh
scripts/: README.md  bench.sh  bench_serve.py  build.sh  convert.sh  expert_hotset_analysis.py  expert_prefetch_analysis.py  gen_tiny_model.py  gen_unicode.py  lib.sh  model.py  models.toml  paired_compare.py  pipeline.sh  serve.sh  validate_c_vs_rust.py
