[package]
name = "coli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "colibrì command-line entry point (chat / web / serve / bench / tokenize)"

[[bin]]
name = "coli"
path = "src/main.rs"

[features]
default = []
# Build the CUDA (Blackwell) backend — requires nvcc (DGX Spark). Off by default.
cuda = ["colibri-backend/cuda", "colibri-engine/cuda"]

[dependencies]
colibri-core = { workspace = true }
colibri-engine = { workspace = true }
colibri-safetensors = { workspace = true }
colibri-tokenizer = { workspace = true }
colibri-json = { workspace = true }
colibri-cluster = { workspace = true }
colibri-backend = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
