[package]
name = "colibri-safetensors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "On-demand safetensors indexing and reads across shards (port of c/st.h)"

[dependencies]
colibri-json = { workspace = true }
colibri-core = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
